k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: morda-production
    labels:
        app: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            serviceAccountName: morda-production-frontend
            containers:
                - name: frontend
                  image: gcr.io/atlas-k8s/morda-frontend-production:latest
                  resources:
                      requests:
                          cpu: '500m'
                  ports:
                      - containerPort: 8080
