k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend
    namespace: morda-production
spec:
    type: NodePort
    selector:
        app: frontend
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080
