k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: production-letsencrypt
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: morda-ingress
  namespace: morda-production
spec:
  rules:
    - host: atlasbus.ru
      http: &api_backend
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 8080
          - path: /admin.*
            pathType: Prefix
            backend:
              service:
                name: morda-admin
                port:
                  number: 8080
          - path: /api/.*
            pathType: Prefix
            backend:
              service:
                name: morda-api
                port:
                  number: 5000
          - path: /o/.*
            pathType: Prefix
            backend:
              service:
                name: morda-api
                port:
                  number: 5000
    - host: atlasbus.by
      http:
        <<: *api_backend
    - host: atlasbus.app
      http:
        <<: *api_backend
    - host: atlasbus.pl
      http:
        <<: *api_backend
    - host: atlasbus.kz
      http:
        <<: *api_backend
    - host: atlasbus.tj
      http:
        <<: *api_backend
    - host: atlasbus.uz
      http:
        <<: *api_backend
    - host: k8s.atlasbus.ru
      http:
        <<: *api_backend
    - host: www.atlasbus.by
      http:
        <<: *api_backend
    - host: www.atlasbus.ru
      http:
        <<: *api_backend
    - host: www.atlasbus.pl
      http:
        <<: *api_backend
    - host: www.atlasbus.app
      http:
        <<: *api_backend
    - host: www.atlasbus.kz
      http:
        <<: *api_backend
    - host: www.atlasbus.tj
      http:
        <<: *api_backend
    - host: www.atlasbus.uz
      http:
        <<: *api_backend
  tls:
    - hosts:
        - atlasbus.ru
        - atlasbus.by
        - atlasbus.app
        - atlasbus.pl
        - atlasbus.kz
        - atlasbus.tj
        - atlasbus.uz
        - k8s.atlasbus.ru
        - www.atlasbus.by
        - www.atlasbus.app
        - www.atlasbus.ru
        - www.atlasbus.pl
        - www.atlasbus.kz
        - www.atlasbus.tj
        - www.atlasbus.uz
      secretName: morda-production-tls
